force-app/main/default/objects/LLC_BI__Transaction_Request_Aggregate__c/fields/LLC_BI__Closing_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closing_Disbursement_Date__c</fullName>
    <description>Users manually populate this optional date field to indicate the payment disbursement date for the closed loan. Payment disbursement cannot occur prior to the Projected Close Date. By default, this field is blank.</description>
    <inlineHelpText>Enter the desired payment disbursement date for the closed loan.</inlineHelpText>
    <label>Closing Disbursement Date</label>
    <type>Date</type>
</CustomField>