force-app/main/default/objects/LLC_BI__Transaction_Request_Aggregate__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this optional field to indicate the loan associated with the transaction request aggregate. By default this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the loan associated with the transaction request aggregate.</inlineHelpText>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Transaction Request Aggregates</relationshipLabel>
    <relationshipName>Transaction_Request_Aggregates</relationshipName>
    <type>Lookup</type>
</CustomField>