force-app/main/default/objects/LLC_BI__Transaction_Request_Aggregate__c/fields/LLC_BI__Right_of_Rescission_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Right_of_Rescission_Date__c</fullName>
    <description>Users populate this optional date field to indicate the date the right of rescission period for a loan ends. The right of rescission date, or midnight date, is the latest date the borrower may rescind or cancel the loan. This date only applies to non-purchase loans. By default, this field is blank.</description>
    <inlineHelpText>Enter the latest date the borrower may rescind or cancel the loan.</inlineHelpText>
    <label>Right of Rescission Date</label>
    <type>Date</type>
</CustomField>