force-app/main/default/objects/LLC_BI__Transaction_Request_Aggregate__c/fields/LLC_BI__Total_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Disbursement__c</fullName>
    <description>The system automatically populates this optional currency field to indicate the total disbursement for the loan. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the total disbursement for the loan.</inlineHelpText>
    <label>Total Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>